--- a/config/zones/US-NW-NWMT.yaml
+++ b/config/zones/US-NW-NWMT.yaml
@@ -5,63 +5,81 @@ bounding_box:
     - 49.5011000000001
 capacity:
   battery storage:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   biomass:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   coal:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 1814.7
-    - datetime: '2024-01-01'
+    - datetime: '2023-01-01'
       source: EIA.gov
       value: 1810.7
   gas:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 258.0
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 465.0
   geothermal:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
-      value: 649.7
-    - datetime: '2024-03-01'
+      value: 669.0
+    - datetime: '2022-01-01'
+      source: EIA.gov
+      value: 644.9
+    - datetime: '2022-03-01'
+      source: EIA.gov
+      value: 649.0
+    - datetime: '2022-11-01'
+      source: EIA.gov
+      value: 652.5
+    - datetime: '2023-01-01'
+      source: EIA.gov
+      value: 668.9
+    - datetime: '2023-09-01'
       source: EIA.gov
       value: 666.1
   hydro storage:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   nuclear:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   oil:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 68.0
   solar:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 17.0
+    - datetime: '2023-01-01'
+      source: EIA.gov
+      value: 97.0
+    - datetime: '2023-08-01'
       source: EIA.gov
       value: 177.0
-    - datetime: '2024-10-01'
+    - datetime: '2024-01-01'
       source: EIA.gov
       value: 179.0
   unknown:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   wind:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 452.9
     - datetime: '2023-12-01'
