--- a/config/zones/US-SW-WALC.yaml
+++ b/config/zones/US-SW-WALC.yaml
@@ -5,60 +5,75 @@ bounding_box:
     - 44.1167400000001
 capacity:
   battery storage:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 0.0
+    - datetime: '2021-12-01'
       source: EIA.gov
       value: 90.0
-    - datetime: '2023-12-01'
+    - datetime: '2023-09-01'
       source: EIA.gov
       value: 105.0
     - datetime: '2024-06-01'
       source: EIA.gov
       value: 115.0
+    - datetime: '2024-09-01'
+      source: EIA.gov
+      value: 130.0
   biomass:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   coal:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 204.0
   gas:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 2153.0
   geothermal:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   hydro:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 3789.5
   hydro storage:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 40.0
   nuclear:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   oil:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 1.5
+    - datetime: '2021-09-01'
       source: EIA.gov
       value: 0.0
   solar:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
+      source: EIA.gov
+      value: 142.2
+    - datetime: '2021-12-01'
+      source: EIA.gov
+      value: 322.2
+    - datetime: '2022-01-01'
       source: EIA.gov
       value: 323.1
-    - datetime: '2023-12-01'
+    - datetime: '2023-09-01'
       source: EIA.gov
       value: 340.7
   unknown:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 0.0
   wind:
-    - datetime: '2023-10-01'
+    - datetime: '2021-01-01'
       source: EIA.gov
       value: 350.0
 comment: Western Area Power Administration - Desert Southwest Region
