Update all irena capacity parsers

--- a/config/zones/GF.yaml
+++ b/config/zones/GF.yaml
@@ -5,9 +5,9 @@ bounding_box:
     - 5.78601
 capacity:
   biomass:
-    - datetime: '2021-01-01'
+    - datetime: '2020-01-01'
       source: IRENA.org
-      value: 5.0
+      value: 5.08
   coal:
     - datetime: '2021-01-01'
       source: IRENA.org
@@ -21,9 +21,9 @@ capacity:
       source: IRENA.org
       value: 0.0
   hydro:
-    - datetime: '2021-01-01'
+    - datetime: '2020-01-01'
       source: IRENA.org
-      value: 119.0
+      value: 120.18
   hydro storage:
     - datetime: '2021-01-01'
       source: IRENA.org
@@ -33,13 +33,19 @@ capacity:
       source: IRENA.org
       value: 0.0
   oil:
-    - datetime: '2021-01-01'
+    - datetime: '2020-01-01'
       source: IRENA.org
-      value: 197.0
+      value: 205.67
   solar:
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 54.95
     - datetime: '2021-01-01'
       source: IRENA.org
-      value: 55.0
+      value: 55.23
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 55.27
   unknown:
     - datetime: '2021-01-01'
       source: IRENA.org
