--- a/config/zones/LK.yaml
+++ b/config/zones/LK.yaml
@@ -5,11 +5,14 @@ bounding_box:
     - 7.592635332223807
 capacity:
   biomass:
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 45.1
     - datetime: '2021-01-01'
       source: IRENA.org
-      value: 45.0
+      value: 45.11
   coal:
-    - datetime: '2021-01-01'
+    - datetime: '2020-01-01'
       source: IRENA.org
       value: 900.0
   gas:
@@ -21,12 +24,18 @@ capacity:
       source: IRENA.org
       value: 0.0
   hydro:
-    - datetime: '2022-01-01'
+    - datetime: '2020-01-01'
       source: IRENA.org
-      value: 1846.0
+      value: 1797.45
     - datetime: '2021-01-01'
       source: IRENA.org
-      value: 1799.0
+      value: 1801.45
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 1831.45
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 1843.15
   hydro storage:
     - datetime: '2021-01-01'
       source: IRENA.org
@@ -36,24 +45,42 @@ capacity:
       source: IRENA.org
       value: 0.0
   oil:
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 1268.0
     - datetime: '2021-01-01'
       source: IRENA.org
       value: 1087.0
-  solar:
     - datetime: '2022-01-01'
       source: IRENA.org
-      value: 714.0
+      value: 924.0
+  solar:
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 427.96
     - datetime: '2021-01-01'
       source: IRENA.org
-      value: 624.0
+      value: 616.78
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 792.52
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 958.78
   unknown:
-    - datetime: '2021-01-01'
+    - datetime: '2020-01-01'
       source: IRENA.org
-      value: 5.0
+      value: 15.0
   wind:
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 179.0
     - datetime: '2021-01-01'
       source: IRENA.org
       value: 252.0
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 267.0
 contributors:
   - q--
 country: LK
