--- a/config/zones/BF.yaml
+++ b/config/zones/BF.yaml
@@ -3,6 +3,43 @@ bounding_box:
     - 8.892385444787848
   - - 2.888623886238889
     - 15.569491043133539
+capacity:
+  biomass:
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 0.9
+  hydro:
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 34.6
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 36.6
+  oil:
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 339.16
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 389.16
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 395.0
+  solar:
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 55.92
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 56.7
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 87.3
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 176.91
 country: BF
+parsers:
+  productionCapacity: IRENA.fetch_production_capacity
 region: Africa
 timezone: Africa/Ouagadougou
