--- a/config/zones/ZA.yaml
+++ b/config/zones/ZA.yaml
@@ -5,60 +5,78 @@ bounding_box:
     - -21.626451924999927
 capacity:
   biomass:
-    - datetime: '2021-01-01'
+    - datetime: '2020-01-01'
       source: IRENA.org
-      value: 265.0
+      value: 264.69
   coal:
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 42457.0
     - datetime: '2021-01-01'
       source: IRENA.org
       value: 44013.0
-  gas:
-    - datetime: '2021-01-01'
+    - datetime: '2023-01-01'
       source: IRENA.org
-      value: 0.0
-  geothermal:
-    - datetime: '2021-01-01'
-      source: IRENA.org
-      value: 0.0
+      value: 43599.0
   hydro:
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 747.65
     - datetime: '2021-01-01'
       source: IRENA.org
-      value: 751.0
+      value: 751.65
   hydro storage:
-    - datetime: '2021-01-01'
+    - datetime: '2020-01-01'
       source: IRENA.org
       value: 2732.0
   nuclear:
-    - datetime: '2021-01-01'
+    - datetime: '2020-01-01'
       source: IRENA.org
       value: 1940.0
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 1934.0
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 1940.0
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 1934.0
   oil:
-    - datetime: '2021-01-01'
+    - datetime: '2020-01-01'
       source: IRENA.org
-      value: 2440.0
+      value: 3445.4
   solar:
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 5994.49
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 6315.91
     - datetime: '2022-01-01'
       source: IRENA.org
-      value: 6368.0
-    - datetime: '2021-01-01'
+      value: 6325.83
+    - datetime: '2023-01-01'
       source: IRENA.org
-      value: 6358.0
-  unknown:
-    - datetime: '2021-01-01'
-      source: IRENA.org
-      value: 0.0
+      value: 6164.23
   wind:
-    - datetime: '2022-01-01'
+    - datetime: '2020-01-01'
       source: IRENA.org
-      value: 3102.0
+      value: 2516.0
     - datetime: '2021-01-01'
       source: IRENA.org
-      value: 2956.0
+      value: 2495.0
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 3163.0
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 3442.0
 contributors:
   - IV1T3
 country: ZA
 delays:
-  production: 96 # 4 days - as of 11/03/2025, on 10/03/2025, delay was above 4 days for the first time, so do not set it higher
+  production: 96
 emissionFactors:
   direct:
     battery discharge:
