--- a/config/zones/CD.yaml
+++ b/config/zones/CD.yaml
@@ -1,3 +1,46 @@
+capacity:
+  biomass:
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 2.96
+  hydro:
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 2597.8
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 2607.7
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 2932.45
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 3172.45
+  oil:
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 31.84
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 75.57
+  solar:
+    - datetime: '2018-01-01'
+      source: IRENA.org
+      value: 8.33
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 9.58
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 14.39
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 17.71
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 22.37
 country: CD
+parsers:
+  productionCapacity: IRENA.fetch_production_capacity
 region: Africa
 timezone: Africa/Kinshasa
