--- a/config/zones/CM.yaml
+++ b/config/zones/CM.yaml
@@ -3,6 +3,40 @@ bounding_box:
     - 1.234661205627823
   - - 16.69836198361986
     - 13.581716988154412
+capacity:
+  gas:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 268.21
+  hydro:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 812.52
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 814.0
+  oil:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 433.01
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 434.37
+  solar:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 12.7
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 13.56
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 26.24
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 26.31
 country: CM
+parsers:
+  productionCapacity: IRENA.fetch_production_capacity
 region: Africa
 timezone: Africa/Douala
