--- a/config/zones/CW.yaml
+++ b/config/zones/CW.yaml
@@ -3,8 +3,26 @@ bounding_box:
     - 11.537431473445437
   - - -68.23200926588031
     - 12.889546858796207
+capacity:
+  oil:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 204.2
+  solar:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 11.93
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 13.23
+  wind:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 46.5
 contributors:
   - VIKTORVAV99
 country: CW
+parsers:
+  productionCapacity: IRENA.fetch_production_capacity
 region: Americas
 timezone: America/Curacao
