--- a/config/zones/BN.yaml
+++ b/config/zones/BN.yaml
@@ -29,6 +29,9 @@ capacity:
     - datetime: '2022-01-01'
       source: IRENA.org
       value: 4.9
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 5.04
 country: BN
 parsers:
   productionCapacity: IRENA.fetch_production_capacity
