--- a/config/zones/CG.yaml
+++ b/config/zones/CG.yaml
@@ -4,6 +4,10 @@ bounding_box:
   - - 19.124786247862488
     - 4.2081244322773586
 capacity:
+  biomass:
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 12.2
   gas:
     - datetime: '2018-01-01'
       source: IRENA.org
