--- a/config/zones/CW.yaml
+++ b/config/zones/CW.yaml
@@ -15,6 +15,9 @@ capacity:
     - datetime: '2020-01-01'
       source: IRENA.org
       value: 13.23
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 13.36
   wind:
     - datetime: '2019-01-01'
       source: IRENA.org
