--- a/config/zones/DZ.yaml
+++ b/config/zones/DZ.yaml
@@ -17,6 +17,9 @@ capacity:
     - datetime: '2022-01-01'
       source: IRENA.org
       value: 24457.6
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 25657.6
   hydro:
     - datetime: '2019-01-01'
       source: IRENA.org
