--- a/config/zones/FM.yaml
+++ b/config/zones/FM.yaml
@@ -1,3 +1,22 @@
+capacity:
+  hydro:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 0.73
+  oil:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 38.87
+  solar:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 2.9
+  wind:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 0.83
 country: FM
+parsers:
+  productionCapacity: IRENA.fetch_production_capacity
 region: Oceania
 timezone: Pacific/Chuuk
