--- a/config/zones/HT.yaml
+++ b/config/zones/HT.yaml
@@ -1,3 +1,34 @@
+capacity:
+  hydro:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 77.89
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 77.99
+  oil:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 400.37
+  solar:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 3.06
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 2.98
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 3.2
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 3.89
+  wind:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 0.02
 country: HT
+parsers:
+  productionCapacity: IRENA.fetch_production_capacity
 region: Americas
 timezone: America/Port-au-Prince
