--- a/config/zones/JM.yaml
+++ b/config/zones/JM.yaml
@@ -3,6 +3,45 @@ bounding_box:
     - 17.21699428410645
   - - -75.68936189361888
     - 19.01840067056311
+capacity:
+  biomass:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 32.13
+  gas:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 339.0
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 489.0
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 499.0
+  hydro:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 30.0
+  oil:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 891.66
+  solar:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 107.01
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 107.06
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 109.61
+  wind:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 102.0
 country: JM
+parsers:
+  productionCapacity: IRENA.fetch_production_capacity
 region: Americas
 timezone: America/Jamaica
