--- a/config/zones/KH.yaml
+++ b/config/zones/KH.yaml
@@ -3,6 +3,91 @@ bounding_box:
     - 9.919902918851918
   - - 108.10687606876067
     - 15.204564920729169
+capacity:
+  biomass:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 75.97
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 68.27
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 66.27
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 75.27
+  coal:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 708.7
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 675.0
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 1045.0
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 1300.0
+  hydro:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 1329.7
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 1676.0
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 1791.0
+  oil:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 268.58
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 651.11
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 611.65
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 635.78
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 392.35
+  solar:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 137.28
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 329.8
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 392.26
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 477.06
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 481.88
+  unknown:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 0.95
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 7.95
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 7.65
+  wind:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 0.25
 country: KH
+parsers:
+  productionCapacity: IRENA.fetch_production_capacity
 region: Asia
 timezone: Asia/Phnom_Penh
