--- a/config/zones/LA.yaml
+++ b/config/zones/LA.yaml
@@ -1,3 +1,45 @@
+capacity:
+  biomass:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 123.08
+  coal:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 1653.0
+  hydro:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 6223.99
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 8013.19
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 8955.79
+    - datetime: '2022-01-01'
+      source: IRENA.org
+      value: 9645.79
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 9756.33
+  oil:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 0.02
+  solar:
+    - datetime: '2019-01-01'
+      source: IRENA.org
+      value: 34.29
+    - datetime: '2020-01-01'
+      source: IRENA.org
+      value: 45.31
+    - datetime: '2021-01-01'
+      source: IRENA.org
+      value: 59.34
+    - datetime: '2023-01-01'
+      source: IRENA.org
+      value: 59.36
 country: LA
 fallbackZoneMixes:
   _source: IEA 2020 (used because Our World in Data has a lot of 'other renewables'
@@ -9,5 +51,7 @@ fallbackZoneMixes:
       coal: 0.28410228182546
       hydro: 0.713395716573259
       solar: 0.0010758606885508
+parsers:
+  productionCapacity: IRENA.fetch_production_capacity
 region: Asia
 timezone: Asia/Vientiane
